@@ -49,6 +49,12 @@ libftdi
 
 http://www.intra2net.com/de/produkte/opensource/ftdi/
 
+-----------------------------------------------------
+GLUT (optional, only needed for kinematics simulator)
+-----------------------------------------------------
+
+http://www.opengl.org/resources/libraries/glut/
+
 =====================
 ftd2xx versus libftdi
 =====================
@@ -57,17 +63,19 @@ libnifalcon can use one of two libraries to access the falcon: ftd2xx, distribut
 
 FTD2XX:
 Windows: Fine
-Linux: Mostly Works?
+Linux: Fine
 64-bit Linux: No 64-bit drivers available
 OS X: Locks up on write function after < 1000 loops
 
 libftdi:
 Windows: Untested (Recommended to use FTD2XX)
-Linux: Stable, but runs at quarter speed of windows FTD2XX
-64-bit Linux: Stable, but runs at quarter speed of windows FTD2XX 
-OS X: Stable, but runs at quarter speed of windows FTD2XX
+Linux: Stable, but runs at half speed
+64-bit Linux: Stable, but runs at half speed
+OS X: Stable, but runs at half speed
 
-So, basically, ftd2xx is stable on windows, iffy everywhere else. libftdi is slow, but works everywhere. Just expect things to be choppy as you'll be lucky to get a ~300hz update rate.
+So, basically, ftd2xx is stable on windows and linux, iffy everywhere else. libftdi is somewhat slower, but works everywhere. This is being worked on right now, see the following blog post for more details:
+
+http://www.nonpolynomial.com/archives/2008/04/libusb-libftdi-latency-and-my-own-stupid.php
 
 ==================
 Platform Specifics
@@ -84,15 +92,14 @@ Windows
 Linux
 -----
 
-- libftdi is recommended for Linux, for stability and compatibility reasons. ftd2xx seems to work ok, but libftdi is a bit more stable.
+- Either ftd2xx or libftdi can be used on linux. Currently, ftd2xx still runs slightly faster. 
 - 64-BIT USERS: There are no versions of ftd2xx drivers for 64-bit linux. libftdi has been tested and found to work fine with libnifalcon on 64-bit platforms.
+- IF USING FTD2XX, make sure to read the instructions that come with it on setting up the proc system properly.
 - Some installations of libftdi using debian apt-get seem to be a little unstable with libnifalcon (this has mainly been found on 64-bit machines). If you have installed libftdi from a prepackaged install and have stability issues accessing the falcon, it is recommended that you try compiling libftdi yourself.
 - Programs built with libnifalcon (including example programs that come with the library) requires either root access (i.e. running under sudo) or correct udev based USB permissions to run as non-root.
-- libnifalcon has been known to close the falcon incorrectly, at which point the USB cable must be unplugged and replugged for the falcon to start working again. If things tend to freeze up during initlization, this is probably the case.
 
 ---
 OSX
 ---
 
 - If you use ftd2xx: OS X seems to block on writes after a very short period of time. This does not happen with libftdi. Stopping and restarting the program seems to clear up the issue. I have no idea what the problem is here. 
-- libnifalcon has been known to close the falcon incorrectly, at which point the USB cable must be unplugged and replugged for the falcon to start working again. If things tend to freeze up during initlization, this is probably the case.
