@@ -13,9 +13,6 @@ IF(LIBUSB_FOUND)
 	IF(APPLE)
 	  SET_TARGET_PROPERTIES (falcon_dk_math_libftdi PROPERTIES LINK_FLAGS "-framework GLUT -framework OpenGL -framework IOKit -framework Carbon")
 	ENDIF(APPLE)
-	IF(NOT WIN32)
-	  INSTALL(TARGETS falcon_dk_math_libftdi RUNTIME DESTINATION "/usr/local/bin")
-	ENDIF(NOT WIN32)
   ENDIF(LIBFTDI_FOUND)
 ENDIF(LIBUSB_FOUND)
 
@@ -32,8 +29,5 @@ IF(LIBFTD2XX_FOUND)
 	TARGET_LINK_LIBRARIES(falcon_dk_math_ftd2xx ${LIBNIFALCON_FTD2XX} ${LIBFTD2XX} m) 
 	SET_TARGET_PROPERTIES (falcon_dk_math_ftd2xx PROPERTIES LINK_FLAGS "-framework GLUT -framework OpenGL -framework IOKit -framework Carbon")
   ENDIF(APPLE)
-  IF(NOT WIN32)
-	INSTALL(TARGETS falcon_dk_math_ftd2xx RUNTIME DESTINATION "/usr/local/bin")
-  ENDIF(NOT WIN32)
 ENDIF(LIBFTD2XX_FOUND)
 
